; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_file_new_from_path_to_string.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_file_new_from_path_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @config_file_new_from_path_to_string(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  store i64 0, i64* %3, align 8
  store i32* null, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @path_is_valid(i8* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %32

9:                                                ; preds = %1
  %10 = load i8*, i8** %2, align 8
  %11 = bitcast i32** %4 to i8**
  %12 = call i64 @filestream_read_file(i8* %10, i8** %11, i64* %3)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %31

14:                                               ; preds = %9
  %15 = load i64, i64* %3, align 8
  %16 = icmp sge i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i32*, i32** %4, align 8
  %19 = bitcast i32* %18 to i8*
  %20 = load i8*, i8** %2, align 8
  %21 = call i32* @config_file_new_from_string(i8* %19, i8* %20)
  store i32* %21, i32** %5, align 8
  br label %22

22:                                               ; preds = %17, %14
  %23 = load i32*, i32** %4, align 8
  %24 = bitcast i32* %23 to i8*
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = load i32*, i32** %4, align 8
  %28 = bitcast i32* %27 to i8*
  %29 = call i32 @free(i8* %28)
  br label %30

30:                                               ; preds = %26, %22
  br label %31

31:                                               ; preds = %30, %9
  br label %32

32:                                               ; preds = %31, %1
  %33 = load i32*, i32** %5, align 8
  ret i32* %33
}

declare dso_local i64 @path_is_valid(i8*) #1

declare dso_local i64 @filestream_read_file(i8*, i8**, i64*) #1

declare dso_local i32* @config_file_new_from_string(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
